--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "jsx": "react",
+    "esModuleInterop": true,
+    "target": "es5",
+    "module": "commonjs",
+    "strict": true
   }
 }
